public/assets/css/style.css
/* PAGES */

.page{ 
    position: relative;
    padding-top: 150px;
    text-align:center; 
    width: 100%;
	height: 100%;
	background-repeat: repeat;
    overflow: scroll;
}

.page-home{ background: url("home.jpg");}
.page-candidate{ background: url("candidates.jpg");}
.page-result{ background: url("results.jpg");}
.page-about{ background: url("about.jpg"); } 

.header-home{
	color: white;
	padding-right: 50px;
	font-size: 15px;
}
.header-about{
	color: white;
	padding-left: 50px;
	font-size: 15px;
}

.fancy-field{
	color:white;
	background-color: transparent;
}

.fancy-button{
	color:white;
	background-color: transparent;
}

/* ANIMATIONS */

.spinner{
	-webkit-animation:spin 1s infinite;
	-moz-animation:spin 1s infinite;
	animation:spin 1s infinite;
}

@keyframes spin {
	from { transform:rotate(0deg); }
	to { transform:rotate(360deg); }
}

@-webkit-keyframes spin {
	from { -webkit-transform:rotate(0deg); }
	to { -webkit-transform:rotate(360deg); }
}

@-moz-keyframes spin {
	from { -moz-transform:rotate(0deg); }
	to { -moz-transform:rotate(360deg); }
}

@keyframes fadeIn {
	from { opacity: 0 }
	to	 { opacity: 1 }
}

@keyframes slideDown {
	from { transform: translateZ(100%); }
	to   { transform: translateZ(0);}
}

@keyframes slideInRight {
    from    { transform:translateX(100%); }
    to      { transform: translateX(0); }
}

@keyframes slideOutLeft {
    to      { transform: translateX(-100%); }
}

.slideDown{
    animation-name: slideDown;
    -webkit-animation-name: slideDown;

    animation-duration: 1s;
    -webkit-animation-duration: 1s;

    animation-timing-function: ease;
    -webkit-animation-timing-function: ease;

    visibility: visible !important;
}

.fadeIn{
	animation-name: fadeIn;
	-webkit-animation-name: fadeIn;

	animation-duration:1s;
	-webkit-animation-duration: 1s;
	animation-timing-function: ease;
	-webkit-animation-timing-function: ease;

	visibility: visible !important;
}

@keyframes slideDown {
    from { transform: translateY(-100%); }
	to   { transform: translateY(0%); }
}

@-webkit-keyframes slideDown {
    from { -webkit-transform: translateY(-100%); }
	to   { -webkit-transform: translateY(0%); }
}

.ng-enter { z-index: 8888; }
.ng-leave { z-index: 9999; }

.page-home.ng-enter { animation: slideDown 0.5s both ease-in; }
.page-home.ng-leave { animation: slideOutLeft both ease-in; }

.page-candidate.ng-enter { animation: slideInRight 0.5s both ease-in; }
.page-candidate.ng-leave { animation: slideOutLeft both ease-in; }

.page-result.ng-enter { animation: slideInRight 0.5s both ease-in; }
.page-result.ng-leave { animation: slideOutLeft both ease-in; }

.page-about.ng-enter { animation: slideDown 0.5s both ease-in; }
.page-about.ng-leave { animation: slideOutLeft both ease-in; }

